Fixed error message alignment on small screens

--- a/client/src/components/PostCreator/PostCreatorStyles.module.css
+++ b/client/src/components/PostCreator/PostCreatorStyles.module.css
@@ -21,8 +21,9 @@
 }
 
 #error_msg{
+    margin: auto;
     color: red;
-    margin-top: 20px;
+    overflow-wrap: break-word;
 }
 
 #tags_input_area{
